--- a/css/stely.css
+++ b/css/stely.css
@@ -15,11 +15,34 @@ button:hover{
 
 html, body{
     height: 100%;
+    overflow-x: hidden;
 }
 
 .pedra{
     padding: 20px;
     background-color: #404eed;
+    position: relative;
+}
+
+.bg_img{
+    position: absolute;
+    bottom: 0;
+    left: -300px;
+    
+}
+
+.esquerda{
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    margin-left: -1030px;
+}
+
+.direita{
+    position: absolute;
+    right: 50%;
+    bottom: 0;
+    margin-right: -1030px;
 }
 
 .papel{
@@ -27,6 +50,7 @@ html, body{
     padding: 0 2%;
     width: 100%;
     max-width: 1270px;
+    cursor: pointer;
 }
 
 header{
@@ -46,6 +70,10 @@ header ul li a{
     text-decoration: none;
 }
 
+header ul li a:hover{
+    text-decoration: underline;
+}
+
 header button{
     padding: 10px 15px;
     border: 0;
@@ -60,6 +88,8 @@ header button{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    margin-top: 30px;
 }
 
 .caixa h1{
